--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "liip/doctrine-cache-bundle": "1.0.*@dev",
         "liip/imagine-bundle": "1.0.*@dev",
         "snc/redis-bundle": "1.1.x-dev",
-        "predis/predis": "0.8.x-dev"
+        "predis/predis": "0.8.x-dev",
+        "mmoreram/http-headers-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
