--- a/src/Web/BackendBundle/Resources/config/factory.yml
+++ b/src/Web/BackendBundle/Resources/config/factory.yml
@@ -5,6 +5,12 @@ services:
         factory_method: getRepository
         arguments: [ Web\BackendBundle\Entity\User ]
 
+    project_entity:
+        class: Doctrine\Common\Persistence\ObjectRepository
+        factory_service: doctrine
+        factory_method: getRepository
+        arguments: [ Web\BackendBundle\Entity\Project ]
+
     company_entity:
         class: Doctrine\Common\Persistence\ObjectRepository
         factory_service: doctrine
@@ -17,11 +23,11 @@ services:
         factory_method: getRepository
         arguments: [ Web\BackendBundle\Entity\Stage ]
 
-    contacts_entity:
+    contact_entity:
         class: Doctrine\Common\Persistence\ObjectRepository
         factory_service: doctrine
         factory_method: getRepository
-        arguments: [ Web\BackendBundle\Entity\Contacts ]
+        arguments: [ Web\BackendBundle\Entity\Contact ]
 
     position_entity:
         class: Doctrine\Common\Persistence\ObjectRepository
