--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -73,17 +73,12 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
 #Fos User
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: Web\BackendBundle\Entity\User
-
-knp_menu:
-    twig:
-        template: knp_menu.html.twig
-    templating: false
-    default_renderer: twig
 
 fos_rest:
     routing_loader:
@@ -99,6 +94,11 @@ fos_rest:
         failed_validation: HTTP_BAD_REQUEST
         default_engine: twig
 
+fos_message:
+    db_driver: orm
+    thread_class: Web\BackendBundle\Entity\Thread
+    message_class: Web\BackendBundle\Entity\Message
+
 http_headers:
     response:
         x_powered_by:
@@ -109,7 +109,17 @@ http_headers:
             name: X-Author-Contact
             values:
                 - name_Mot.Evans email_seekmas@msn.cn
+        What_let_me_sad:
+            name: What_let_me_sad
+            values:
+                - It is a big project but my partner is sleepy and do nothing , it is disappointed to me and I have to finish it
 knp_time: ~
+
+knp_menu:
+    twig:
+        template: knp_menu.html.twig
+    templating: false
+    default_renderer: twig
 
 knp_paginator:
     page_range: 5                      # default page range used in pagination control
