--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -16,14 +16,12 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_provider: form.csrf_provider
-            logout:
-                path:   /logout
-                target: /
+            logout: true
             anonymous:    true
     access_control:
         # Routes are prefixed by ther user locale.
-        - { path: ^/[^/]+/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/[^/]+/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/[^/]+/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/[^/]+/admin, role: ROLE_ADMIN }
         - { path: ^/[^/]+/, role: ROLE_USER }
