--- a/src/Web/BackendBundle/Resources/config/services.yml
+++ b/src/Web/BackendBundle/Resources/config/services.yml
@@ -14,6 +14,21 @@ services:
         tags:
             - { name: twig.extension }
 
+    twig.extension.text:
+        class: Twig_Extensions_Extension_Text
+        tags:
+           - { name: twig.extension }
+
+    twig.extension.avatar:
+        class: Web\BackendBundle\Twig\AvatarExtension
+        arguments: [@service_container]
+        tags:
+            - { name: twig.extension }
+
     attachment.manager:
         class: Web\BackendBundle\Attachments\AttachmentsManager
         arguments: [@service_container,@attachment_entity]
+
+    avatar.manager:
+        class: Web\BackendBundle\Attachments\AvatarManager
+        arguments: [@service_container]
