--- a/src/Web/BackendBundle/Resources/config/services.yml
+++ b/src/Web/BackendBundle/Resources/config/services.yml
@@ -32,3 +32,16 @@ services:
     avatar.manager:
         class: Web\BackendBundle\Attachments\AvatarManager
         arguments: [@service_container]
+
+    web.menu_builder:
+        class: Web\BackendBundle\Menu\MenuBuilder
+        arguments: ["@knp_menu.factory" , "@service_container"]
+
+    web.menu.main:
+        class: Knp\Menu\MenuItem # the service definition requires setting the class
+        factory_service: web.menu_builder
+        factory_method: createMainMenu
+        arguments: ["@request"]
+        scope: request # needed as we have the request as a dependency here
+        tags:
+            - { name: knp_menu.menu, alias: main } # The alias is what is used to retrieve the menu
