--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "liip/imagine-bundle": "1.0.*@dev",
         "snc/redis-bundle": "1.1.x-dev",
         "predis/predis": "0.8.x-dev",
-        "mmoreram/http-headers-bundle": "dev-master"
+        "mmoreram/http-headers-bundle": "dev-master",
+        "stof/doctrine-extensions-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
