finish invoice process

--- a/src/Web/BackendBundle/Resources/config/factory.yml
+++ b/src/Web/BackendBundle/Resources/config/factory.yml
@@ -88,3 +88,9 @@ services:
         factory_service: doctrine
         factory_method: getRepository
         arguments: [ Web\BackendBundle\Entity\InvoiceItem ]
+
+    invoice_status_entity:
+        class: Doctrine\Common\Persistence\ObjectRepository
+        factory_service: doctrine
+        factory_method: getRepository
+        arguments: [ Web\BackendBundle\Entity\InvoiceStatus ]
